[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadline-backend"
version = "0.1.0"
description = "Lead Line API-first backend foundation"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "boto3>=1.35.0",
  "openai>=1.51.0",
  "requests>=2.32.0",
  "twilio>=9.3.0",
  "svix>=1.60.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-json-logger>=2.0.7",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "opentelemetry-exporter-otlp>=1.30.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0",
  "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.6.3",
  "mypy>=1.11.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
  "contract: contract and API schema tests",
  "e2e: end-to-end lifecycle tests",
  "ai_regression: AI regression test suite",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["^tests/"]
